@@ -1,8 +1,3 @@
 *.pyc
 .idea/
 *.db
-settings_local.py
-settings_prod.py
-media/
-static/*
-migrations/
