@@ -1,0 +1,90 @@
+# Generated by Django 2.0.7 on 2018-07-09 13:51
+
+from django.conf import settings
+from django.db import migrations, models
+import django.db.models.deletion
+import sorl.thumbnail.fields
+
+
+class Migration(migrations.Migration):
+    initial = True
+
+    dependencies = [
+        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Group',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('slug', models.SlugField(blank=True, null=True)),
+                ('title', models.CharField(max_length=100, verbose_name='title')),
+            ],
+            options={
+                'verbose_name': 'group',
+                'verbose_name_plural': 'groups',
+                'ordering': ['section__title', 'title'],
+            },
+        ),
+        migrations.CreateModel(
+            name='Image',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('file', sorl.thumbnail.fields.ImageField(upload_to='images', verbose_name='image')),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Item',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('slug', models.SlugField(blank=True, max_length=100, null=True)),
+                ('title', models.CharField(max_length=100, verbose_name='title')),
+                ('description', models.TextField(verbose_name='description')),
+                ('price', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='price')),
+                ('is_active', models.BooleanField(db_index=True, default=True, verbose_name='display')),
+                ('updated', models.DateTimeField(auto_now=True, db_index=True, verbose_name='updated')),
+                ('posted', models.DateTimeField(auto_now_add=True, verbose_name='posted')),
+                ('group', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='django_classified.Group',
+                                            verbose_name='group')),
+                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
+            ],
+            options={
+                'verbose_name': 'item',
+                'verbose_name_plural': 'items',
+                'ordering': ('-updated',),
+            },
+        ),
+        migrations.CreateModel(
+            name='Profile',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('phone', models.CharField(blank=True, max_length=30, null=True, verbose_name='phone')),
+                ('receive_news', models.BooleanField(db_index=True, default=True, verbose_name='receive news')),
+                (
+                'user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Section',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('title', models.CharField(max_length=100, verbose_name='title')),
+            ],
+            options={
+                'verbose_name': 'section',
+                'verbose_name_plural': 'sections',
+            },
+        ),
+        migrations.AddField(
+            model_name='image',
+            name='item',
+            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='django_classified.Item'),
+        ),
+        migrations.AddField(
+            model_name='group',
+            name='section',
+            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='django_classified.Section',
+                                    verbose_name='section'),
+        ),
+    ]
