@@ -1,0 +1,31 @@
+# Generated by Django 2.0.7 on 2018-07-13 21:58
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+    dependencies = [
+        ('django_classified', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Area',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('slug', models.SlugField()),
+                ('title', models.CharField(max_length=100, verbose_name='title')),
+            ],
+            options={
+                'verbose_name': 'area',
+                'verbose_name_plural': 'areas',
+            },
+        ),
+        migrations.AddField(
+            model_name='item',
+            name='area',
+            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE,
+                                    to='django_classified.Area', verbose_name='area'),
+        ),
+    ]
