@@ -3,7 +3,7 @@
 <nav>
   <ul class="pagination">
     <li>
-      <button class="btn"
+      <button class="btn btn-default"
               name="page"
               value="{% if page_obj.has_previous %}{{ page_obj.previous_page_number }}{% endif %}"
               type="submit"
@@ -15,7 +15,7 @@
     </li>
 
     <li>
-      <button class="btn"
+      <button class="btn btn-default"
               name="page"
               value="{% if page_obj.has_next %}{{ page_obj.next_page_number }}{% endif %}"
               type="submit"
