@@ -18,7 +18,7 @@
         {% for form in formset %}
           {{ form|bootstrap }}
         {% endfor %}
-        <input type='submit' class="btn" value='{% trans "Save" %}'>
+        <input type='submit' class="btn btn-success" value='{% trans "Save" %}'>
       </form>
     </div>
   </div>
