@@ -14,23 +14,32 @@
           <thead>
           <tr>
             <td>{% trans "Group" %}</td>
-            <td>{% trans "Update" %}</td>
-            <td>{% trans "Link" %}</td>
+            <td>{% trans "Title" %}</td>
             <td>{% trans "Price" %}</td>
             <td>{% trans "Posted" %}</td>
+            <td>{% trans "Edit" %}</td>
             <td>{% trans "Delete" %}</td>
           </tr>
           </thead>
         {% endif %}
       <tr>
         <td><a href='{{ object.group.get_absolute_url }}'>{{ object.group }}</a></td>
-        <td><a href='{% url 'django_classified:item-edit' object.pk %}'
-               title='{% trans "Edit item" %}'>{{ object.title }}</a>
-        </td>
-        <td><a href='{{ object.get_absolute_url }}' title='{% trans "Open item" %}'>{% trans "Open" %}</a></td>
+        <td><a href='{{ object.get_absolute_url }}' title='{% trans "Open item" %}'>{{ object.title }}</a></td>
         <td>{{ object.price|intcomma }}</td>
-        <td>{{ object.posted|date:"d.m.Y" }}</td>
-        <td><a href='{% url 'django_classified:my-delete' object.id %}'>{% trans "Delete" %}</a></td>
+        <td>{{ object.posted|timesince }}</td>
+        <td>
+          <a
+                  href='{% url 'django_classified:item-edit' object.pk %}'
+                  title='{% trans "Edit item" %}'
+                  class="btn btn-default">
+            {% trans "Edit" %}
+          </a>
+        </td>
+        <td>
+          <a href='{% url 'django_classified:my-delete' object.id %}' class="btn btn-danger">
+            {% trans "Delete" %}
+          </a>
+        </td>
       </tr>
 
       {% if forloop.last %}
