@@ -22,4 +22,5 @@ urlpatterns = [
     url(r'^user/profile/$', views.ProfileView.as_view(), name='profile'),
     url(r'^user/my/delete/(?P<pk>\d+)/$', views.ItemDeleteView.as_view(), name='my-delete'),
     url(r'^user/logout/$', LogoutView.as_view(), name='logout'),
+    url(r'^user/set-area/$', views.SetAreaView.as_view(), name='set-area'),
 ]
